force-app/main/default/objects/vlocity_cmt__MediaProperty__c/fields/vlocity_cmt__PricingCategory__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PricingCategory__c</fullName>
    <description>This field categorises the Media Property as Premium or not from an advertising pricing perspective. &quot;Premium&quot; is an evaluation based on traffic, Nielsen ratings or Comscore rank.</description>
    <label>Pricing Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>