force-app/main/default/objects/vlocity_cmt__MediaProperty__c/fields/vlocity_cmt__PublicationFrequency__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PublicationFrequency__c</fullName>
    <label>PublicationFrequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>