force-app/main/default/objects/vlocity_cmt__MediaProperty__c/fields/vlocity_cmt__PublisherId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PublisherId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the Publisher of the MediaProperty record.</description>
    <label>Publisher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Media Properties</relationshipLabel>
    <relationshipName>MediaProperties</relationshipName>
    <type>Lookup</type>
</CustomField>