force-app/main/default/objects/vlocity_cmt__MediaProperty__c/fields/vlocity_cmt__PublisherPrimaryContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PublisherPrimaryContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publisher Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Media Properties</relationshipLabel>
    <relationshipName>MediaProperties</relationshipName>
    <type>Lookup</type>
</CustomField>